------------------------------------------------------------------------
Release:	ReiLua version 0.7.0		Using Raylib 5.0 and Forked Raygui 4.0
------------------------------------------------------------------------
KEY CHANGES:
	- CHANGE: Switch to Raylib 5.0 and Raygui 4.0.
	- CHANGE: Audio device no longer initialize automatically in case some other device is used.
	- ADDED: More audio device management functions.
	- ADDED: Random values generation functions.
	- ADDED: More Window-related functions.
	- ADDED: Spline functions.
	- CHANGE: Raygui to version 4.0. Gui libs also updated.
	- ADDED: Support for platforms.
	- ADDED: Platform desktop SDL.
	- CHANGE: Renamed event enums. Events are now platform specific.
	- ADDED: SDL Events.
	- ADDED: Experimental GLFW Pen Touch events. Needs glfw PR https://github.com/glfw/glfw/pull/1445.
	- ADDED: Platform specific API documentation generation.
	- ADDED: Platform web.
	- ADDED: Raygui textures with SetShapesTexture.
	- CHANGE: Raygui wrapper library is now object based. Possible to have multiple separated gui systems.
	- ADDED: Raygui wrapper library disabled and styles for each element.
	- ADDED: Files management functions.
	- ADDED: More Model management functions.
	- ADDED: More Model animations management functions.
	- ADDED: 2D lightmap example.
	- ADDED: RLGL Hello triangle example.
	- ADDED: Rest of rlRenderBatch functions.
	- ADDED: DrawTextureNPatchRepeat.
	- ADDED: GuiScrollBar and made it puplic in raygui.h.
	- ADDED: Rest of font loading/unloading functions.
	- CHANGE: GlyphInfo type to userdata.
	- ADDED: GlyphInfo management functions.
	- CHANGE: GuiTabBar works differently to raygui implementation.
	- CHANGE: Raygui lib refactoring.
	- ADDED: Raygui lib extensions property list.
	- ADDED: Text codepoints management functions.
	- ADDED: Rune, UTF8 lib.
	- CHANGE: Raygui styles include properties, texture and font.
	- ADDED: Build option for Lua events that is off by default.

DETAILED CHANGES: