@@ -1,4 +1,11 @@
 ------------------------------------------------------------------------
+Release:	ReiLua version 0.8.0		Using Raylib 5.0 and Forked Raygui 4.0
+------------------------------------------------------------------------
+KEY CHANGES:
+
+DETAILED CHANGES:
+
+------------------------------------------------------------------------
 Release:	ReiLua version 0.7.0		Using Raylib 5.0 and Forked Raygui 4.0
 ------------------------------------------------------------------------
 KEY CHANGES:
